<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rangeLabel"
            android:layout_weight="5"
            android:textSize="@dimen/defaultTextSize"/>
        <EditText
            android:id="@+id/min"
            android:layout_width="@dimen/editTextWidth"
            android:layout_height="wrap_content"
            android:textSize="@dimen/defaultTextSize"
            android:layout_weight="5"
            android:inputType="number|none"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/defaultTextSize"
            android:text="@string/toLabel"
            android:layout_weight="5"
            />
        <EditText
            android:id="@+id/max"
            android:layout_width="@dimen/editTextWidth"
            android:layout_height="wrap_content"
            android:textSize="@dimen/defaultTextSize"
            android:layout_weight="5"
            android:inputType="number|none"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submitButtonLabel"
            android:textSize="@dimen/defaultTextSize"
            android:layout_weight="5"
            android:onClick="buildTable"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/columnsLabel"
            android:textSize="30sp"
            android:layout_weight="5"
            />
        <CheckBox
            android:id="@+id/squared"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/squared"
            android:layout_weight="6"
            android:textSize="@dimen/checkBoxTextSize"/>
        <CheckBox
            android:id="@+id/cubed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cubed"
            android:layout_weight="6"
            android:textSize="@dimen/checkBoxTextSize"/>
        <CheckBox
            android:id="@+id/sqrt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sqrt"
            android:layout_weight="6"
            android:textSize="@dimen/checkBoxTextSize"/>
        <CheckBox
            android:id="@+id/factorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/factorial"
            android:layout_weight="6"
            android:textSize="@dimen/checkBoxTextSize"/>
    </LinearLayout>
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">\
        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableLayout>
    </ScrollView>
    </HorizontalScrollView>
</LinearLayout>